docs(api): document PackConfig's properties, accessors and defaults
38 of the api's 246 undocumented declarations, all in the type plugins touch most.
api total 246 -> 208; PackConfig 38 -> 0; suite green.

Written per symbol, and two carry warnings rather than descriptions, because that
is what a reader actually needs:

- modloader's setter *silently ignores* an unrecognised value, so a typo does
  nothing rather than failing, and the check order matters because `neoforge` also
  matches Forge's pattern and `legacyfabric` matches Fabric's.
- getPluginConfigs creates an empty list on first ask, which is why it is a function
  and not a map access -- an extension can read and append without null-checking.
- defaultScriptValues records why SPC_SSJ_FORGE_ARGS_SPC must keep defaulting to
  -Djava.security.manager=allow: Forge's ServerStarterJar needs it below Java 24, and
  the templates decide when to pass it.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>